feat: add support for array query object for _and, _or and _nor operators
