# lib/storage/dto/file-filter.dto.ts
@@ -1,4 +1,4 @@
-import { InputType } from '@nestjs/graphql';
+import { Field, InputType } from '@nestjs/graphql';
 import { ApiPropertyOptional } from '@nestjs/swagger';
 import { FilterOperator } from '../../resource';
 import { FileMetaFilter } from './file-meta-filter.dto';
@@ -13,15 +13,19 @@ export class FileFilter {
 
   description?: FilterOperator;
 
-  @ApiPropertyOptional({ type: () => FileFilter })
-  _and?: FileFilter;
+  @Field(() => [FileFilter], { nullable: true })
+  @ApiPropertyOptional({ type: () => [FileFilter] })
+  _and?: FileFilter | FileFilter[];
 
-  @ApiPropertyOptional({ type: () => FileFilter })
-  _or?: FileFilter;
+  @Field(() => [FileFilter], { nullable: true })
+  @ApiPropertyOptional({ type: () => [FileFilter] })
+  _or?: FileFilter | FileFilter[];
 
-  @ApiPropertyOptional({ type: () => FileFilter })
-  _nor?: FileFilter;
+  @Field(() => [FileFilter], { nullable: true })
+  @ApiPropertyOptional({ type: () => [FileFilter] })
+  _nor?: FileFilter | FileFilter[];
 
+  @Field(() => [FileFilter], { nullable: true })
   @ApiPropertyOptional({ type: () => FileMetaFilter })
   meta?: FileMetaFilter;
 }
